# nikshi

./: AssignCommand.cpp  AssignCommand.h  CMakeLists.txt  Client.cpp  Client.h  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  Expression.h  IfCommand.cpp  IfCommand.h  LoopCommand.cpp  LoopCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  README.md  Server.cpp  Server.h  ShuntingYard.cpp  ShuntingYard.h  SleepCommand.cpp  SleepCommand.h  Var.cpp  Var.h  details.txt  main.cpp
